--- a/.github/workflows/sql-review.yml
+++ b/.github/workflows/sql-review.yml
@@ -1,9 +1,10 @@
 on: [pull_request]
 
 jobs:
-  sql-review:
+  # Use separate jobs for different databases, otherwise the failed step will block other following steps
+  mysql-sql-review:
     runs-on: ubuntu-latest
-    name: SQL Review
+    name: MySQL SQL Review
     steps:
       - uses: actions/checkout@v3
       - name: Check MySQL
@@ -14,15 +15,27 @@ jobs:
           override-file-path: ./sql-review-override.yml
           database-type: MYSQL
           file-pattern: ^migration/mysql/.*\.sql$
+  postgres-sql-review:
+    runs-on: ubuntu-latest
+    name: Postgres SQL Review
+    steps:
       - uses: actions/checkout@v3
       - name: Check PostgreSQL
+        # You can change it to a specific version like bytebase/sql-review-action@0.0.4
+        # We suggest using the latest version through the tag. Check it at https://github.com/Bytebase/sql-review-action/tags
         uses: bytebase/sql-review-action@main
         with:
           override-file-path: ./sql-review-override.yml
           database-type: POSTGRES
           file-pattern: ^migration/postgres/.*\.sql$
+  tidb-sql-review:
+    runs-on: ubuntu-latest
+    name: TiDB SQL Review
+    steps:
       - uses: actions/checkout@v3
       - name: Check TiDB
+        # You can change it to a specific version like bytebase/sql-review-action@0.0.4
+        # We suggest using the latest version through the tag. Check it at https://github.com/Bytebase/sql-review-action/tags
         uses: bytebase/sql-review-action@main
         with:
           override-file-path: ./sql-review-override.yml
